--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     def room_version = "2.4.1"
     def nav_version = "2.4.1"
     def work_version = "2.7.1"
+    def dagger_version = "2.40"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
         implementation 'androidx.core:core-ktx:1.7.0'
@@ -70,9 +71,9 @@ dependencies {
             }
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
 
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
 
     //NETWORK INSPECTION
@@ -103,7 +104,10 @@ dependencies {
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
-
     //Work manager for background task
     implementation "androidx.work:work-runtime-ktx:$work_version"
+
+    // Dagger 2
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
